# squelch

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: ARCHITECTURE.md
squelch/: __init__.py  __main__.py  cli.py  config.py
squelch/engine/: __init__.py  audio_capture.py  llm.py  llm_litellm.py  llm_ollama.py  session.py  summarizer.py  transcriber.py  types.py
squelch/engine/audio/: __init__.py  base.py  linux.py  windows.py
squelch/export/: __init__.py  markdown.py
squelch/tui/: __init__.py  about.py  app.py  options.py  themes.py
