[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "squelch"
version = "0.1.0"
description = "Meeting transcription tool with live transcription and AI-powered summaries"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Valentin Louf"}
]

dependencies = [
    "numpy>=1.24",
    "PyAudioWPatch>=0.2.12",
    "faster-whisper>=1.0.0",
    "textual>=0.40.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.0.0",
]

[project.scripts]
squelch = "squelch.cli:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["squelch*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]